--- a/content/0.index.md
+++ b/content/0.index.md
@@ -1,43 +1,67 @@
 ---
-title: alloé - allez, on écrit !
+title: Accueil
 navigation: false
 layout: page
+main:
+  fluid: false
 ---
+
+:ellipsis{right=0px width=75% blur=150px}
 
 ::block-hero
 ---
 cta:
-  - Get Started
-  - /guide
+  - Get started
+  - /introduction/getting-started
 secondary:
   - Open on GitHub →
-  - https://github.com/nuxtlabs/docus
+  - https://github.com/nuxt-themes/docus
 ---
-#code
-```markdown [test.yo]
-# votre personnage :
-  Un homme d'une trentaine d'années semble perdu au milieu de la gare, il porte deux valises qui semblent bien lourdes, et il a du mal à les déplacer parce qu'elles sont volumineuses.
-  
-# rencontre le personnage :
-  Une femme d'une vingtaine d'années, habillée d'une salopette bleue, de dr martens 1460 noires, d'un pull à rayures horizontales rouges et blanches, et d'un béret noir.
-```
+
 #title
 allez, on écrit !
 
 #description
-Write pages in markdown, use Vue components and enjoy the power of Nuxt with a blazing fast developer experience.
+Plaisir d'écrire ensemble et de partager, tout simplement !
+
+#extra
+  ::list
+  - **+50 Components** ready to build rich pages
+  - **Docs** and **Page** layouts
+  - Start from a `README`, scale to a framework documentation
+  ::
+
+#support
+  ::gallery
+  ::
 ::
 
 ::card-grid
-
-::card
 #title
-Coucou
-#description
-Hello
-::
-::
+Écrire et lire, pour le plaisir
 
-```ts [test.ts]
-const var = "coucou";
-```
+#root
+:ellipsis{left=0px width=40rem top=10rem blur=140px}
+
+#default
+  ::card{icon=logos:nuxt-icon}
+  #title
+  Nuxt Architecture
+  #description
+  Harness the full power of [Nuxt 3](https://v3.nuxtjs.org) and its [modules](https://modules.nuxtjs.org) ecosystem.
+  ::
+
+  ::card{icon=IconNuxtStudio}
+  #title
+  Nuxt Studio ready
+  #description
+  Edit your theme content and appearance with live-preview within [Nuxt Studio](https://nuxt.studio).
+  ::
+
+  ::card{icon=logos:vue}
+  #title
+  Vue Components
+  #description
+  Use built-in components (or your own!) inside your content.
+  ::
+::
