--- a/content/0.index.md
+++ b/content/0.index.md
@@ -11,8 +11,8 @@ main:
 ::block-hero
 ---
 cta:
-  - Get started
-  - /introduction/getting-started
+  - 2022
+  - /alloe22/chapitre1
 secondary:
   - Open on GitHub →
   - https://github.com/nuxt-themes/docus
@@ -26,9 +26,9 @@ Plaisir d'écrire ensemble et de partager, tout simplement !
 
 #extra
   ::list
-  - **+50 Components** ready to build rich pages
-  - **Docs** and **Page** layouts
-  - Start from a `README`, scale to a framework documentation
+  - Rendez-vous **une fois par an**
+  - Écrire ensemble une **histoire longue**
+  - Chaque participant écrit un chapitre
   ::
 
 #support
