--- a/content/0.index.md
+++ b/content/0.index.md
@@ -6,7 +6,18 @@ main:
   fluid: false
 ---
 
-:ellipsis{right=0px width=75% blur=150px}
+
+::callout
+#summary
+alloé ?
+#content
+Le projet **alloé** a vu le jour en 2018, suite à ma participation au [Novel in a Day](https://novelinaday.com/) de [pigfender](http://www.pigfender.com/).  
+Le principe a toujours été simple :
+- les inscriptions se font par mail à [mathieu@alloe.fr](mailto:mathieu@alloe.fr)
+- durant le weekend qui sépare les deux semaines de vacances de la Toussaint, chaque participant reçoit un mail avec les informations relatives au chapitre qui lui a été attribué
+- chaque participant a 48h pour écrire son chapitre et me l'envoyer
+- après une phase de correction, principalement pour des questions de cohérence, tous les chapitres sont mis bout à bout, et on obtient alors une histoire longue, collaborative, écrite par tous les participants !
+::
 
 ::block-hero
 ---
@@ -22,13 +33,14 @@ secondary:
 allez, on écrit !
 
 #description
-Plaisir d'écrire ensemble et de partager, tout simplement !
+Plaisir d'écrire ensemble et de partager, tout simplement !  
+Ce site regroupe les archives des années 2018 à 2022.
 
 #extra
   ::list
-  - Rendez-vous **une fois par an**
   - Écrire ensemble une **histoire longue**
   - Chaque participant écrit un chapitre
+  - Un weekend d'écriture
   ::
 
 #support
@@ -36,32 +48,3 @@ Plaisir d'écrire ensemble et de partager, tout simplement !
   ::
 ::
 
-::card-grid
-#title
-Écrire et lire, pour le plaisir
-
-#root
-:ellipsis{left=0px width=40rem top=10rem blur=140px}
-
-#default
-  ::card{icon=logos:nuxt-icon}
-  #title
-  Nuxt Architecture
-  #description
-  Harness the full power of [Nuxt 3](https://v3.nuxtjs.org) and its [modules](https://modules.nuxtjs.org) ecosystem.
-  ::
-
-  ::card{icon=IconNuxtStudio}
-  #title
-  Nuxt Studio ready
-  #description
-  Edit your theme content and appearance with live-preview within [Nuxt Studio](https://nuxt.studio).
-  ::
-
-  ::card{icon=logos:vue}
-  #title
-  Vue Components
-  #description
-  Use built-in components (or your own!) inside your content.
-  ::
-::
