--- a/content/0.index.md
+++ b/content/0.index.md
@@ -25,8 +25,8 @@ cta:
   - 2022
   - /alloe22/chapitre1
 secondary:
-  - Open on GitHub →
-  - https://github.com/nuxt-themes/docus
+  - Actualités alloé →
+  - https://blog.alloe.fr
 ---
 
 #title
